# static-alloc

./: .cirrus.yml  .gitignore  Cargo.toml  Changes.md  LICENSE.MIT  LICENSE.ZLIB  Readme.md  release_checks
alloc-free/: Cargo.toml  Changes.md  Readme.md
alloc-free/src/: alloc.rs  boxed.rs  fixed_vec.rs  lib.rs  rc.rs  uninit.rs
alloc-free/tests/: box.rs  fixed_vec.rs  rc.rs
alloc-traits/: Cargo.toml  Changes.md  Readme.md  build.rs
alloc-traits/src/: global.rs  helper.rs  layout.rs  lib.rs  local.rs  ref_.rs  unsize.rs  util.rs
alloc-traits/tests/: unsize.rs
buffer-vec/: Cargo.toml  Readme.md
buffer-vec/src/: lib.rs  same.rs
buffer-vec/tests/: median_name.rs
exit-stack/: Cargo.toml  Readme.md
exit-stack/src/: lib.rs
exit-stack/tests/: stackful.rs
fill/: Cargo.toml  Changes.md  Readme.md
fill/src/: assign.rs  fill.rs  lib.rs
fill/tests/: alloc.rs  core.rs
same-alloc/: Cargo.toml  Readme.md
same-alloc/src/: lib.rs  same.rs
src/: boxed.rs  fixed_vec.rs  lib.rs  rc.rs  slab.rs  uninit.rs
static-alloc/: Cargo.toml  Changes.md  Readme.md  release_checks
static-alloc/src/: boxed.rs  bump.rs  incremental.rs  inline_vec.rs  leaked.rs  lib.rs  slab.rs  uninit.rs
static-alloc/src/doc/: global_allocator.md  pinned.md  static_allocator.md
static-alloc/src/unsync/: allocation.rs  bump.rs  chain.rs  mod.rs  node.rs
static-alloc/tests/: alloca.rs  chain.rs  huuuuuge.rs  leak.rs  leak_box.rs  threaded.rs  unsync.rs  vec.rs  vec_try.rs
tests/: Readme.md  box.rs  fixed_vec.rs  leak.rs  rc.rs  vec.rs  vec_try.rs
tests/alloc/: huuuuuge.rs
unsize/: Cargo.toml  Changes.md  Readme.md  build.rs
unsize/src/: alloc_impls.rs  coercion_impls.rs  lib.rs  tests.rs
unsize/tests/: alloc.rs  unsize.rs
without-alloc/: Cargo.toml  Changes.md  Readme.md
without-alloc/src/: alloc.rs  boxed.rs  fixed_vec.rs  lib.rs  rc.rs  uninit.rs
without-alloc/src/uninit/: mod.rs  ptr_layout.rs  uninit.rs  unique.rs
without-alloc/tests/: box.rs  fixed_vec.rs  rc.rs  unsize.rs
