[package]
name = "static-alloc"
version = "0.0.1"
description = "General purpose global allocator(s) with static storage"
authors = ["Andreas Molzer <andreas.molzer@gmx.de>"]
edition = "2018"
license = "MIT"
documentation = "https://docs.rs/static-alloc"
repository = "https://github.com/HeroicKatora/static-alloc"
readme = "Readme.md"
categories = ["embedded", "memory-management", "no-std"]

[dependencies]
# None. Kind of important.

[features]
# For apis depending on "try_reserve" (#48043)
try_reserve = []
