[package]
name = "alloc-traits"
version = "0.1.1"
description = "Traits to replace or supplement the alloc module in no_std"
authors = ["Andreas Molzer <andreas.molzer@gmx.de>"]
edition = "2018"
license = "MIT OR Apache-2.0 OR Zlib"
documentation = "https://docs.rs/static-alloc"
repository = "https://github.com/HeroicKatora/static-alloc"
categories = ["embedded", "memory-management", "no-std"]

[lib]
name = "alloc_traits"

[dependencies]

[package.metadata.docs.rs]
all-features = true
