[package]
name = "fill"
version = "0.1.1"
description = "Provides the Fill trait, an alternative to Extend for finite containers"
authors = ["Andreas Molzer <andreas.molzer@gmx.de>"]
edition = "2018"
license = "MIT"
documentation = "https://docs.rs/fill"
repository = "https://github.com/HeroicKatora/static-alloc"
readme = "Readme.md"
keywords = ["fill", "extend", "no-std", "no_std"]
categories = ["embedded", "no-std", "data-structures"]

[dependencies]
# None.

[features]
default = []

# Provide implementations for types in `alloc`
alloc = []

[[test]]
name = "alloc"
path = "tests/alloc.rs"
required-features = ["alloc"]

[package.metadata.docs.rs]
all-features = true
