[package]
name = "static-alloc"
version = "0.2.2"
description = "A bump allocator on static memory for the alloc-traits crate"
authors = ["Andreas Molzer <andreas.molzer@gmx.de>"]
edition = "2018"
license = "MIT OR Apache-2.0 OR Zlib"
documentation = "https://docs.rs/static-alloc"
repository = "https://github.com/HeroicKatora/static-alloc"
readme = "Readme.md"
categories = ["embedded", "memory-management", "no-std"]

[package.metadata.docs.rs]
all-features = true

[dependencies]
alloc-traits = { path = "../alloc-traits", version = "0.1.0" }
atomic-polyfill = { version = "0.1.2", optional = true }

[features]
alloc = []
# For apis depending on "try_reserve" (#48043).
# Currently only used in a test for ensure future opportunities.
nightly_try_reserve = []
# Enables the `unsync::Chain` module. Note that this is explicitly outside the
# SemVer stability guarantees!
nightly_chain = ["alloc"]
# Enables the use of the `atomic-polyfill` crate to support targets without
# native atomic CAS operations
polyfill = ["atomic-polyfill"]

# Tests that test `Bump` as GlobalAlloc. Must be in a separate test each.
[[test]]
name = "vec"
path = "tests/vec.rs"

[[test]]
name = "vec_try"
path = "tests/vec_try.rs"
required-features = ["nightly_try_reserve"]

[[test]]
name = "huuuuuge"
path = "tests/alloc/huuuuuge.rs"
# Disabled because it chokes rustc. Just a PoC.
required-features = ["DISABLED"]

[[test]]
name = "unsync"
path = "tests/unsync.rs"
required-features = ["alloc"]
