[package]
name = "unsize"
version = "1.0.0-beta"
description = "A stable alternative to CoerceUnsize"
authors = ["Andreas Molzer <andreas.molzer@gmx.de>"]
edition = "2018"
license = "MIT OR Apache-2.0 OR Zlib"
documentation = "https://docs.rs/unsize"
repository = "https://github.com/HeroicKatora/static-alloc"
readme = "Readme.md"
categories = ["embedded", "no-std"]

[dependencies]

[build-dependencies]
autocfg = "1"

[package.metadata.docs.rs]
all-features = true
