[package]
name = "unsize"
version = "1.1.0"
description = "A stable alternative to CoerceUnsized"
authors = ["Andreas Molzer <andreas.molzer@gmx.de>"]
edition = "2018"
license = "MIT OR Apache-2.0 OR Zlib"
documentation = "https://docs.rs/unsize"
repository = "https://github.com/HeroicKatora/static-alloc"
readme = "Readme.md"
categories = ["embedded", "no-std"]

[dependencies]

[features]
# Implement CoerecePtr for `alloc` pointer types
alloc = []
# Implement Unsize for `std` pointer types
std = ["alloc"]

[build-dependencies]
autocfg = "1"

[package.metadata.docs.rs]
all-features = true
